--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ venv/
 *.ckpt
 *.jpeg
 *.jpg
+# Allow PNG files in comprehensive-rag-guide
+!LLM/comprehensive-rag-guide/*.png
 *.png
 *.pdf
 *.m4a
